# airflow_dags

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
dags/: create_table_dag.py  dag.py  dummy.py  dummy_catchup.py  dummy_python.py  dummy_xcom.py  fill_table_dag.py
dags/sql/: fill_table.sql  order_status.sql
final_project_pm_api/: Dockerfile  requirements.txt
final_project_pm_api/src/: engine.py  main.py
final_project_pm_api/src/order_status/: order_status_funcs.py  order_status_schema.py
final_project_pm_api/src/order_status_stats/: order_status_filter.py
final_project_pm_api/src/sales/: sales_functions.py  sales_schema.py
